# rust-agent

./: AGENT_FIX_SUMMARY.md  CONVERSATION_CONTEXT_FIX_SUMMARY.md  Cargo.toml  DIRECTORY_CREATION_FEATURES.md  ERROR_RESOLUTION.md  FINAL_ANSWER_FIX_SUMMARY.md  OPENAI_MIGRATION.md  PATH_SECURITY_FEATURES.md  PROJECT_INFO.md  README.md  STREAMING_FEATURES.md  build.sh  env.example  run.sh
src/: agent.rs  errors.rs  lib.rs  main.rs  prompt_template.rs  tests.rs  tools.rs  types.rs
test/: index.html  script.js  snake.html  style.css
test/css/: style.css
test/game/: index.html
test/game/css/: style.css
test/game/js/: ai.js  board.js  game.js
test/gameaa/: game.js  index.html
test/js/: game.js
