[package]
name = "rust-agent"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust implementation of ReAct Agent with tool execution capabilities"
readme = "README.md"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
regex = "1.0"
anyhow = "1.0"
thiserror = "2.0.16"
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
platform-info = "2.0.5"

# 使用 OpenAI 官方包
async-openai = "0.29.1"
